macro/tests/ui/not_found.rs
use embed_entitlements_macro::convert_entitlements_to_der;

fn main() {
    let _ = convert_entitlements_to_der!("no file here");
}
